# canpi-web-app-ssr

./: .env  .gitignore  CHANGES.md  Cargo.toml  INSTALL.md  Makefile  README.md  extract_version.py
debianpkg/: canpi-ssr.conf  canpi-ssr.service
package/: Makefile  canpi-web-app-ssr.epm
scratch/: canpi_example.cfg  canpi_example.json  hotspot-example.json  hotspot_example.cfg
src/: content.rs  errors.rs  handlers.rs  main.rs  mod.rs  models.rs  routes.rs  state.rs  topics.rs  validation.rs
src/handlers/: autohs_handlers.rs  canpi_handlers.rs  general_handlers.rs  mod.rs  topic_handlers.rs
static/: canpi-config-defn.json  canpi-ssr.json  canpi-ssr.logrotate  canpi.css  canpigrid.css  static-web-page.html
systemd/: canpi-ssr.conf  canpi-ssr.service
templates/: autohs_confirm.html  autohs_display.html  autohs_edit.html  autohs_index.html  autohs_save.html  base.html  canpi_confirm.html  canpi_display.html  canpi_edit.html  canpi_index.html  canpi_save.html  display_config.html  edit_attribute.html  edit_canpi.html  edit_config.html  index.html  list_config.html  top_menu.format  top_menu.html.format  topic_confirm.html  topic_display.html  topic_edit.html  topic_index.html  topic_save.html
