[package]
name = "canpi-web-app-ssr"
version = "0.1.2"
authors = ["Mark Thornber <mark.thornber@merg.org.uk>"]
edition = "2018"
license = "GPL-3.0-0r-later"
readme = "README.md"
description = "A configuration web application"
repository = "https://github.com/emthornber/capnpi-web-app-ssr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "canpi-ssr"
path = "src/main.rs"

[dependencies]
#canpi-config = { git = "https://github.com/emthornber/canpi-config.git", branch = "lgtrunk" }
canpi-config = { path = "../canpi-config" }
actix-web = "4.5.1"
actix-files = "0.6.5"
# Data serialisation library
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.72"
serde_test = "1.0.130"
tera = { version = "1", features = ["builtins"] }
# JSON libraries
jsonschema = "0.17.1"
schemars = "0.8.10"
# Other utilities
anyhow = "1.0.81"
thiserror = "1.0.30"
# Error handling
bcrypt = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4.0"
dotenv = "0.15.0"
rust-ini = "0.21.0"
lazy_static = "1.4.0"
log = "0.4.21"
futures-util = "0.3.28"
strfmt = "0.2.4"
itertools = "0.12.1"

[dev-dependencies]
actix-rt = "2.5.0"
cargo-deb = "2.1.0"
